// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationHint styles should render with default styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<span
  class="circuit-0"
>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with invalid styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #D23F47;
}

.circuit-1 {
  display: inline-block;
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #D23F47;
}

<span
  class="circuit-0"
>
  <div
    class="circuit-1"
    color="danger"
  >
    <svg
      fill="none"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3 11a1 1 0 0 1-1.41 0L8 9.41 6.41 11A1 1 0 0 1 5 9.59L6.59 8 5 6.41A1 1 0 0 1 5 5a1 1 0 0 1 1.41 0L8 6.59 9.59 5A1 1 0 0 1 11 5a1 1 0 0 1 0 1.41L9.41 8 11 9.59A1 1 0 0 1 11 11z"
        fill="currentColor"
      />
    </svg>
  </div>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with valid styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #138849;
}

.circuit-1 {
  display: inline-block;
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #138849;
}

<span
  class="circuit-0"
>
  <div
    class="circuit-1"
    color="success"
  >
    <svg
      fill="none"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.78 6.62-4 5a.993.993 0 0 1-.72.38H7a1 1 0 0 1-.71-.29l-2-2a1.004 1.004 0 0 1 1.42-1.42L6.92 9.5l3.3-4.12a1 1 0 1 1 1.56 1.24z"
        fill="currentColor"
      />
    </svg>
  </div>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with warning styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #1A1A1A;
}

.circuit-1 {
  display: inline-block;
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #F5C625;
}

.circuit-1::before {
  content: '';
  display: inline-block;
  position: absolute;
  top: 2px;
  left: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  background: #000;
  border-radius: 100%;
}

.circuit-1 svg {
  position: relative;
  z-index: 1;
}

<span
  class="circuit-0"
>
  <div
    class="circuit-1"
    color="warning"
  >
    <svg
      fill="none"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zM7 5a1 1 0 0 1 2 0v3a1 1 0 0 1-2 0V5zm1 7.5A1.25 1.25 0 1 1 8 10a1.25 1.25 0 0 1 0 2.5z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  This field is required
</span>
`;
